syntax = "proto3";

service TesteService {
   rpc GetOrders (Empty) returns (Orders) {}
   rpc List (Empty) returns (NoteList) {}
}

message Empty {}

message Orders {
   string ordersJson = 1;
}

message Note {
   string id = 1;
   string title = 2;
   string content = 3;
}

message NoteList {
   repeated Note notes = 1;
}